--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,10 +27,7 @@ jobs:
     - name: Test
       run: go test -v ./...
       
-    - name: ls
-      run: ls -a
-      
-#     - uses: actions/upload-artifact@v3
-#       with:
-#         name: my-artifact
-#         path: wooddy
+    - uses: actions/upload-artifact@v3
+      with:
+        name: my-artifact
+        path: wooddy
